I created multiple div tags and i gave them classes and styled the class of the section tag that i first created

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body{
+    margin: 0;
+}
 .background{
-    
+    background-image: url(/4567367.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    height: 100vh;
 }
