--- a/style.css
+++ b/style.css
@@ -11,4 +11,9 @@ body{
 .display{
     display: flex;
     justify-content: center;
+    margin-top: 30px;
+    column-gap: 20px;
+}
+.containe{
+    padding-top: 50px;
 }
