--- a/style.css
+++ b/style.css
@@ -17,7 +17,13 @@ body{
     column-gap: 20px;
 }
 .containe{
-    padding-top: 50px;
+    padding: 10px 10px 10px 10px;
+}
+#first{
+    margin-top: -70px;
+}
+.line2{
+    padding-left: 100px !important;
 }
 .name{
     position: relative;
