--- a/style.css
+++ b/style.css
@@ -46,6 +46,27 @@ body{
     left: -60px;
     font-weight: 900 !important;
 }
+.name3{
+    position: relative;
+    top: -70px;
+    left: 50px;
+    font-weight: 900 !important;
+}
+.number3{
+    position: relative;
+    top: -30px;
+    left: 5px;
+    font-weight: 900 !important;
+    font-size: 30px;
+}
+.position3{
+    color: white;
+    letter-spacing: 5px;
+    position: relative;
+    top: 15px;
+    left: -30px;
+    font-weight: 900 !important;
+}
 .name5{
     position: relative;
     top: -70px;
@@ -65,6 +86,27 @@ body{
     position: relative;
     top: 15px;
     left: -60px;
+    font-weight: 900 !important;
+}
+.name6{
+    position: relative;
+    top: -70px;
+    left: 41px;
+    font-weight: 900 !important;
+}
+.number6{
+    position: relative;
+    top: -30px;
+    left: -10px;
+    font-weight: 900 !important;
+    font-size: 30px;
+}
+.position6{
+    color: white;
+    letter-spacing: 5px;
+    position: relative;
+    top: 15px;
+    left: -40px;
     font-weight: 900 !important;
 }
 .name8{
