--- a/style.css
+++ b/style.css
@@ -261,4 +261,24 @@ body{
         left: 30px;
         font-weight: 900 !important;
     }
+    .left2{
+        position: relative;
+        top: -30px;
+    }
+    .position5{
+        color: white;
+        letter-spacing: 5px;
+        position: relative;
+        top: -5px;
+        left: 30px;
+        font-weight: 900 !important;
+    }
+    .position6{
+        color: white;
+        letter-spacing: 5px;
+        position: relative;
+        top: -5px;
+        left: 30px;
+        font-weight: 900 !important;
+    }
 }
